--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Página 1</h1>
     <p> Esta é a primeira página.</p>
-    <a href="index.html">Voltar para a Página 1</a>
+    <a href="pagina2.html">ir para a Página 2</a>
 </body>
 </html>  
